--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <p>Hello</p>
+  <p>Deploy Test</p>
 <nav>
   <a routerLink="/matches">Matches</a>
   <a routerLink="/groups">Groups</a>
