--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -14,8 +14,8 @@
         <th scope='col' title='Losses Total'>L</th>
         <th scope='col' title='Points accumulated'>Pts</th>
         <th scope='col' title='Set Ratio: Won_Sets / Lost_Sets*'>Set%</th>
-        <th scope='col' title='Points Scored'>Pts S</th>
-        <th scope='col' title='Points Given'>Pts L</th>
+        <th scope='col' title='Points Scored'>Pt S</th>
+        <th scope='col' title='Points Given'>Pt L</th>
         <!-- <th title = 'Rank within group: Match points .. set ratio .. set point diff'>Rank</th> -->
       </tr>
     </thead>
