--- a/src/app/groups/groups.component.css
+++ b/src/app/groups/groups.component.css
@@ -6,21 +6,13 @@ table {
   width: 2em;
 }
 
-.mat-column-team1 {
-  width: 10em;
-}
-
-.mat-column-team1 {
-  width: 10em;
-}
 
 .teamcol {
-  width: 10em;
+  width: 8em;
   left: 0;
   top: auto;
+  text-align:left;
   /*only relevant for first row*/
-  margin-top: -1px;
-  /*compensate for top border*/
 }
 
 table td:nth-child(5) { text-align: end; }
