Set Dialog Error Checking Fixed

--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -5,7 +5,7 @@
 <div *ngFor='let group of stats.groups'>
   <h3>Group {{group.groupName}}</h3>
 
-  <table class="table table-bordered">
+  <table class="table table-borderless">
     <thead>
       <tr>
         <th scope='col' class='teamcol' title='Team Name'>Name</th>
