Some lame firebase implementation was done

--- a/src/app/matches/matches.component.css
+++ b/src/app/matches/matches.component.css
@@ -13,3 +13,7 @@ table td:nth-child(4) { text-align: end; }
   left: 0;
   top: auto;
 }
+
+.settings-container {
+  margin-top: 5px; /* Adjust the value as needed */
+}
