--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <nav>
   <a routerLink="/matches">Matches</a>
   <a routerLink="/groups">Groups</a>
+  <a routerLink="/login">Login</a>
 </nav>
 <router-outlet></router-outlet>
 </div>
