--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -1,5 +1,5 @@
 <p>Group Standing</p>
-<button (click)="test()">Test</button>
+<!-- <button (click)="test()">Test</button> -->
 <hr>
 
 <div *ngFor='let group of stats.groups'>
