refactored match.service

--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -2,7 +2,7 @@
 <!-- <button (click)="test()">Test</button> -->
 <hr>
 
-<div *ngFor='let group of stats.groups'>
+<div *ngFor='let group of stats.groupsStats'>
   <h3>Group {{group.groupName}}</h3>
 
   <table class="table table-borderless">
