--- a/src/app/tourney/tourney.component.html
+++ b/src/app/tourney/tourney.component.html
@@ -1,5 +1,6 @@
 <div>
   <h2>Choose a Tourney</h2>
   <button type="button" class="btn btn-primary" (click)="this.tourneyService.setCurTourney('2023-coed')">2023 Coed</button><br><br>
-  <button type="button" class="btn btn-primary" (click)="this.tourneyService.setCurTourney('2023-men')">2023 Men</button>
+  <button type="button" class="btn btn-primary" (click)="this.tourneyService.setCurTourney('2023-men')">2023 Men</button><br><br>
+  <button type="button" class="btn btn-primary" (click)="this.tourneyService.setCurTourney('2024-men')">2024 Men</button>
 </div>
